# se

./: COPYING  Makefile.am  configure.ac  sample.serc
help/: Makefile.am
man/: Makefile.am  scriptse.1  se.1
src/: Makefile.am  ascii.h  changetty.c  changetty.h  constdef.h  docmd1.c  docmd1.h  docmd2.c  docmd2.h  edit.c  edit.h  extern.h  main.c  main.h  misc.c  misc.h  pat.c  pat.h  scratch.c  scratch.h  screen.c  screen.h  scriptse.c  se.h  term.c  term.h
tests/: Makefile.am  hello_world.sh  test-runner.sh
